feat: update SQL initialization scripts for improved data handling and formatting

--- a/virtual-campus/src/main/resources/application.properties
+++ b/virtual-campus/src/main/resources/application.properties
@@ -7,5 +7,4 @@ spring.datasource.driver-class-name=org.sqlite.JDBC
 # MyBatis mapper scanning (we use annotations)
 mybatis.type-aliases-package=seu.virtualcampus.domain
 logging.level.root=INFO
-spring.datasource.initialization-mode=always
-spring.datasource.schema=classpath:schema.sql
+spring.sql.init.mode=always
