--- a/virtual-campus/src/main/resources/application.properties
+++ b/virtual-campus/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=virtual-campus
 spring.datasource.url=jdbc:sqlite:virtualcampus.sqlite
 spring.sql.init.schema-locations=classpath:sqls/schema.sql
-# ???????????
+# MyBatis 配置
 mybatis.type-handlers-package=seu.virtualcampus.handler
+mybatis.mapper-locations=classpath:mapper/*.xml
 spring.datasource.driver-class-name=org.sqlite.JDBC
 # MyBatis mapper scanning (we use annotations)
 mybatis.type-aliases-package=seu.virtualcampus.domain
