feat: update base URL to use dynamic host configuration and remove hardcoded localhost references

--- a/virtual-campus/src/main/resources/application.properties
+++ b/virtual-campus/src/main/resources/application.properties
@@ -9,4 +9,6 @@ mybatis.type-aliases-package=seu.virtualcampus.domain
 logging.level.root=INFO
 spring.sql.init.mode=always
 shop.merchant.account=AC1757661314119456D38
+server.port=12345
+server.address=0.0.0.0
 
