--- a/virtual-campus/src/main/resources/application.properties
+++ b/virtual-campus/src/main/resources/application.properties
@@ -1,10 +1,35 @@
+# Application configuration
 spring.application.name=virtual-campus
+
+# Database configuration -
 spring.datasource.url=jdbc:sqlite:virtualcampus.sqlite
-spring.sql.init.schema-locations=classpath:sqls/schema.sql
-# ???????????
-mybatis.type-handlers-package=seu.virtualcampus.handler
 spring.datasource.driver-class-name=org.sqlite.JDBC
-# MyBatis mapper scanning (we use annotations)
+
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=1
+spring.datasource.hikari.minimum-idle=1
+
+# Database initialization
+spring.sql.init.mode=never
+
+# MyBatis configuration
+mybatis.type-handlers-package=seu.virtualcampus.handler
 mybatis.type-aliases-package=seu.virtualcampus.domain
+mybatis.configuration.map-underscore-to-camel-case=true
+
+# Character encoding configuration
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+
+# Logging configuration
 logging.level.root=INFO
-spring.sql.init.mode=always
+logging.level.seu.virtualcampus=DEBUG
+logging.level.org.springframework.jdbc=DEBUG
+
+# Timezone configuration
+spring.jackson.time-zone=GMT+8
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
+# Disable DevTools restart
+spring.devtools.restart.enabled=false
