feat: implement AiChatService for managing AI chat sessions and messages

--- a/virtual-campus/src/main/resources/application.properties
+++ b/virtual-campus/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 # Application configuration
 spring.application.name=virtual-campus
-
 # Database configuration -
 spring.datasource.url=jdbc:sqlite:virtualcampus.sqlite
 spring.sql.init.schema-locations=classpath:sqls/schema.sql
@@ -14,4 +13,5 @@ spring.sql.init.mode=always
 shop.merchant.account=AC1757661314119456D38
 server.port=12345
 server.address=0.0.0.0
-
+# deepseek api key
+deepseek.api.key=sk-ac3093dad38047939f5ae3e10c1dff6f
