--- a/virtual-campus/pom.xml
+++ b/virtual-campus/pom.xml
@@ -79,6 +79,12 @@
             <artifactId>javafx-fxml</artifactId>
             <version>${javafx.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.vladsch.flexmark</groupId>
+            <artifactId>flexmark-all</artifactId>
+            <version>0.64.0</version>
+        </dependency>
+
 
         <!-- HTTP client for JavaFX frontend -->
         <dependency>
